--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -79,6 +79,6 @@ RUN pip3 install jupyter --user \
 
 WORKDIR /home/glue/notebook
 
-ADD kernels/gluepyspark/kernel.json /home/glue/.local/share/jupyter/kernels/gluepyspark/
+COPY --chown=glue:glue kernels/gluepyspark/kernel.json /home/glue/.local/share/jupyter/kernels/gluepyspark/
 
 ENTRYPOINT [ "start_notebook" ]
